[package]
name = "trading-base"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
